<resources>
    <string name="app_name">InventoryApp.v02</string>

    <!-- Label for overflow menu option that inserts fake data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Books</string>

    <!-- Title for the activity to add a new book[CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a new Book</string>

    <!-- Title for the activity to edit book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for input fields [CHAR LIMIT=20] -->
    <string name="category_title">Title:</string>
    <string name="category_price">Price:</string>
    <string name="category_qty">Quantity:</string>
    <string name="category_supp_name">Supplier Name:</string>
    <string name="category_supp_phone">Supplier Phone:</string>


    <!-- Text hint for fields in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_title">enter book title</string>
    <string name="hint_book_price">enter book price</string>
    <string name="hint_book_qty">enter qty</string>
    <string name="hint_book_supp_n">supplier name</string>
    <string name="hint_book_supp_p">supplier phone</string>
    <string name="toast_error">Error saving new book</string>
    <string name="toast_saved">New book saved !</string>
    <string name="toast_edit_error">Error saving book</string>
    <string name="toast_edit_saved">Book saved !</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No books stored yet..</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="tv_price">Price: $</string>
    <string name="tv_qty">Quantity: </string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="toast_no_save">Nothing saved in db</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="btn_sale">sale</string>

    <string name="btn_minus">-</string>
    <string name="btn_add">+</string>
    <string name="btn_order">Order</string>

</resources>
