<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditActivity">

    <!-- Title category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_title"
            android:textColor="?attr/colorPrimaryDark" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingStart="@dimen/activity_margin">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_title"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_title"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price"
            android:textColor="?attr/colorPrimary" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingStart="@dimen/activity_margin">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_price"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

    <!-- QTY category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_qty"
            android:textColor="?attr/colorPrimaryDark" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingStart="@dimen/activity_margin">

            <!-- Decrease button -->
            <Button
                android:id="@+id/decrease_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_minus"
                android:textColor="@color/text_white"
                android:background="@color/colorPrimaryDark"/>

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_qty"
                style="@style/EditorFieldStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:hint="@string/hint_book_qty"
                android:inputType="number" />

            <!-- Increase button -->
            <Button
                android:id="@+id/increase_button"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_add"
                android:textColor="@color/text_white"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier name category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supp_name"
            android:textColor="?attr/colorPrimary" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingStart="@dimen/activity_margin">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supp_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supp_n"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier phone category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supp_phone"
            android:textColor="?attr/colorPrimaryDark" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingStart="@dimen/activity_margin">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supp_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_supp_p"
                android:inputType="number" />
            <!-- Increase button -->
            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_order"
                android:textColor="@color/text_white"
                android:background="@color/colorPrimaryDark"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
