<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/activity_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <TextView
            android:id="@+id/list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_padding"
                android:text="@string/tv_price"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#AEB6BD" />

            <TextView
                android:id="@+id/list_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#AEB6BD" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_padding"
                android:text="@string/tv_qty"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#AEB6BD" />

            <TextView
                android:id="@+id/list_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/text_gray" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sell"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_margin8"
        android:background="@color/colorPrimaryDark"
        android:focusable="false"
        android:text="@string/btn_sale"
        android:textColor="@color/text_white" />

</LinearLayout>